--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -58,27 +58,27 @@
                 <option value="Retired">Retired</option>
             </select>
             <br><br>
-            <label>What type of organizations are you affiliated with? (select all that apply)</label>
-                <form>
-                    <br>
-                    <input type="checkbox" id="cbUni" name="organization_name" value="University">
-                    <label>University</label>
-                    <br>
-                    <input type="checkbox" id="cbPrivate" name="organization_name" value="Private">
-                    <label>Private</label>
-                    <br>
-                    <input type="checkbox" id="cbSchool" name="organization_name" value="School">
-                    <label>School</label>
-                    <br>
-                    <input type="checkbox" id="cbCompany" name="organization_name" value="Company">
-                    <label>Company</label>
-                    <br>
-                    <input type="checkbox" id="cbGovernment" name="organization_name" value="Government">
-                    <label>Government</label>
-                    <br>
-                    <input type="checkbox" id="cbNone" name="organization_name" value="N/A">
-                    <label>N/A</label>
-                </form>
+            <fieldset>
+                <legend>What type of organizations are you affiliated with? (select all that apply)</legend>
+                <br>
+                <input type="checkbox" id="cbUni" name="organization_name" value="University">
+                <label>University</label>
+                <br>
+                <input type="checkbox" id="cbPrivate" name="organization_name" value="Private">
+                <label>Private</label>
+                <br>
+                <input type="checkbox" id="cbSchool" name="organization_name" value="School">
+                <label>School</label>
+                <br>
+                <input type="checkbox" id="cbCompany" name="organization_name" value="Company">
+                <label>Company</label>
+                <br>
+                <input type="checkbox" id="cbGovernment" name="organization_name" value="Government">
+                <label>Government</label>
+                <br>
+                <input type="checkbox" id="cbNone" name="organization_name" value="N/A">
+                <label>N/A</label>
+            </fieldset>
             <br><br>
             <label >Do you use social media?</label>
             <select name="use_sm" id="smPlatform">
@@ -86,36 +86,36 @@
                 <option value="No">No</option>
             </select>
             <br><br>
-            <label>What social media platforms do you commonly use? (select all that apply)</label>
-                <form>
-                    <input type="checkbox" id="cbDiscord" name="platform_name" value="Discord">
-                    <label>Discord</label>
-                    <br>
-                    <input type="checkbox" id="cbFacebook" name="platform_name" value="Facebook">
-                    <label>Facebook</label>
-                    <br>
-                    <input type="checkbox" id="cbInstagram" name="platform_name" value="Instagram">
-                    <label>Instagram</label>
-                    <br>
-                    <input type="checkbox" id="cbPinterest" name="platform_name" value="Pinterest">
-                    <label>Pinterest</label>
-                    <br>
-                    <input type="checkbox" id="cbReddit" name="platform_name" value="Reddit">
-                    <label>Reddit</label>
-                    <br>
-                    <input type="checkbox" id="cbSnapchat" name="platform_name" value="Snapchat">
-                    <label>Snapchat</label>
-                    <br>
-                    <input type="checkbox" id="cbTikTok" name="platform_name" value="TikTok">
-                    <label>TikTok</label>
-                    <br>
-                    <input type="checkbox" id="cbTwitter" name="platform_name" value="Twitter">
-                    <label>Twitter</label>
-                    <br>
-                    <input type="checkbox" id="cbYoutube" name="platform_name" value="Youtube">
-                    <label>Youtube</label>
-                    <br>
-                </form>
+            <fieldset>
+                <legend>What social media platforms do you commonly use? (select all that apply)</legend>
+                <input type="checkbox" id="cbDiscord" name="platform_name" value="Discord">
+                <label>Discord</label>
+                <br>
+                <input type="checkbox" id="cbFacebook" name="platform_name" value="Facebook">
+                <label>Facebook</label>
+                <br>
+                <input type="checkbox" id="cbInstagram" name="platform_name" value="Instagram">
+                <label>Instagram</label>
+                <br>
+                <input type="checkbox" id="cbPinterest" name="platform_name" value="Pinterest">
+                <label>Pinterest</label>
+                <br>
+                <input type="checkbox" id="cbReddit" name="platform_name" value="Reddit">
+                <label>Reddit</label>
+                <br>
+                <input type="checkbox" id="cbSnapchat" name="platform_name" value="Snapchat">
+                <label>Snapchat</label>
+                <br>
+                <input type="checkbox" id="cbTikTok" name="platform_name" value="TikTok">
+                <label>TikTok</label>
+                <br>
+                <input type="checkbox" id="cbTwitter" name="platform_name" value="Twitter">
+                <label>Twitter</label>
+                <br>
+                <input type="checkbox" id="cbYoutube" name="platform_name" value="Youtube">
+                <label>Youtube</label>
+                <br>
+            </fieldset>
             <br><br>
             <label>What is the average time you spend on social media every day?</label>
             <select id="avgTime" name="avg_daily_sm_use">
