--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,26 +25,26 @@
         <a class="navbar-brand" href="/">
             <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" width="65" height="35" alt="">
         </a>
-        <a class="navbar-brand">Provo</a>
+        <a class="navbar-brand">Provo Community</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto text-white">
                 <!-- Home button -->
-                <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home <span class="sr-only"></span></a>
                 </li>
 
                 <!-- Tableau Dashboard -->
-                <li class="nav-item active">
-                    <a class="nav-link" href="/dashboard">Why Mental Health?<span class="sr-only"></span></a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/dashboard">Why Mental Health?<span class="sr-only"></span></a>
                 </li>
 
                 <!-- Admin Dashboard: survey results, etc -->
-                <li class="nav-item active">
-                    <a class="nav-link" href="/admindashboard">Workers<span class="sr-only"></span></a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/admindashboard">Workers<span class="sr-only"></span></a>
                 </li>
             </ul>
             <!-- Login -->
