--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
+    <style>
+        .nav-item {
+        list-style: none;
+        }
+    </style>
+    <h2 class="p-3 bg-opacity-10 fs-6 fw-lighter text-center">Provo Social Media Usage and Mental Health Committee</h2>
+    <nav class="navbar sticky-top navbar-expand-lg navbar" style="background-color: #2596be;" data-bs-theme="dark">
+        <a class="navbar-brand" href="/">
+            <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" width="65" height="35" alt="">
+        </a>
+        <a class="navbar-brand">Provo Community</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto text-white">
+                <!-- Home button -->
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home <span class="sr-only"></span></a>
+                </li>
+
+                <!-- Tableau Dashboard -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="/dashboard">Why Mental Health?<span class="sr-only"></span></a>
+                </li>
+
+                <!-- Admin Dashboard: survey results, etc -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="/admindashboard">Workers<span class="sr-only"></span></a>
+                </li>
+            </ul>
+            <!-- Login -->
+            <li class="nav-item mx-auto me-2">
+            <a class="nav-link" href="/login">Login</a>
+            </li>
+        </div>
+    </nav>
+
     <div class="jumbotron jumbotron-fluid" style="background-image: linear-gradient(to bottom, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.6) 100%), url(/resources/laladancedesign_logo.png)">
         <div class="row mt-5 justify-content-center" style="opacity: 0.7;">
             <div class="contact-form section-sm p-5 cta bg-light">
