--- a/views/helpGenZ.ejs
+++ b/views/helpGenZ.ejs
@@ -9,16 +9,79 @@
 </head>
 <body>
     <section>
-        <h1>You're from:</h1>
-        <h1 class="hidden">Gen Z</h1>
-    </section>
-
-    <section>
-        <h2>Your generation may suffer more from:</h2>
-        <h2 class="hidden">Depression</h2>
-        <h2 class="hidden">Worriedness</h2>
-        <h2 class="hidden">Distractions</h2>
-        <h2>When compared with other generations</h2>
+        <div class=>
+            <h1>You're from:</h1>
+            <h1 class="hidden">Gen Z</h1>
+            <!-- <br>
+            <br>
+            <br>    
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>    
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>    
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>    
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>    
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>    
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>    
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>    
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br> -->
+            <h2>Your generation may suffer more from:</h2>
+            <h2 class="hidden">Depression</h2>
+            <h2 class="hidden">Worriedness</h2>
+            <h2 class="hidden">Distractions</h2>
+            <h2>When compared with other generations</h2>
+        </div>
     </section>
 </body>
 </html>
