--- a/views/helpGenZ.ejs
+++ b/views/helpGenZ.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <div class=>
+        <div class="container">
             <h1>You're from:</h1>
             <h1 class="hidden">Gen Z</h1>
             <!-- <br>
