--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -6,24 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
-        input[type="range"] {
-            width: 300px;
-        }
-
-        datalist {
-            display: flex;
-            justify-content: space-between;
-            padding: 0 10px;
-        }
-      </style>
 </head>
 <body>
+    <!-- onsubmit="getTimeStamp(); -->
     <form id="myForm"form action="/submitSurvey" method="POST">
         <fieldset>
             <legend>Social Media Survey</legend>
             <br>
-            <input type="hidden" id="timestamp" name="timestamp" value="<%= new Date().toISOString() %>">
+<!-- Add this hidden input field to capture the timestamp -->
+            <!-- <input type="hidden" name="timestamp" id="timestamp" value=""> -->
             <label for="location">Location</label>
             <select id="location" name="location">
                 <option value="Provo" selected>Provo</option>
@@ -441,9 +432,18 @@
                 </div>
             </div> 
 
-            <button type="submit">Submit</button>
+            <button type="submit" >Submit</button>
         </fieldset>
     </form>
+    
+    <!-- <script>
+        function getTimeStamp()
+        {
+            // Set the timestamp value in the hidden input field
+            document.getElementById('timestamp').value = new Date().toISOString();
+        }
+       
+    </script> -->
     
 </body>
 </html>
