--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -29,10 +29,10 @@
                 <option value="Provo" selected>Provo</option>
             </select>
             <br><br>
-            <label for="numAge">What is your age? </label>
+            <label for="numAge">1. What is your age? </label>
             <input type="number" id="numAge" name="age" min="1">
             <br><br>
-            <label for="txtGender">Gender</label>
+            <label for="txtGender">2. Gender</label>
             <select id="txtGender" name="gender">
                 <!-- <option value="" disabled selected style="color:grey;">SELECT</option> -->
                 <option value="Male">Male</option>
@@ -40,7 +40,7 @@
                 <option value="Other">Other</option>
             </select>
             <br><br>
-            <label for="rStatus">Relationship Status</label>
+            <label for="rStatus">3. Relationship Status</label>
             <select id="rStatus" name="relationship">
                 <!-- <option value="" disabled selected>Select</option> -->
                 <option value="In a relationship">In a relationship</option>
@@ -49,7 +49,7 @@
                 <option value="Divorced">Divorced</option>
             </select>
             <br><br>
-            <label for="oStatus">Occupation Status</label>
+            <label for="oStatus">4. Occupation Status</label>
             <select id="oStatus" name="occupation">
                 <!-- <option value="" disabled selected>Select</option> -->
                 <option value="University Student">University Student</option>
@@ -59,7 +59,7 @@
             </select>
             <br><br>
             <fieldset>
-                <legend>What type of organizations are you affiliated with? (select all that apply)</legend>
+                <legend>5. What type of organizations are you affiliated with? (select all that apply)</legend>
                 <br>
                 <input type="checkbox" id="cbUni" name="organization_name" value="University">
                 <label>University</label>
@@ -80,14 +80,14 @@
                 <label>N/A</label>
             </fieldset>
             <br><br>
-            <label >Do you use social media?</label>
+            <label>6. Do you use social media?</label>
             <select name="use_sm" id="smPlatform">
                 <option value="Yes">Yes</option>
                 <option value="No">No</option>
             </select>
             <br><br>
             <fieldset>
-                <legend>What social media platforms do you commonly use? (select all that apply)</legend>
+                <legend>7. What social media platforms do you commonly use? (select all that apply)</legend>
                 <input type="checkbox" id="cbDiscord" name="platform_name" value="Discord">
                 <label>Discord</label>
                 <br>
@@ -117,7 +117,7 @@
                 <br>
             </fieldset>
             <br><br>
-            <label>What is the average time you spend on social media every day?</label>
+            <label>8. What is the average time you spend on social media every day?</label>
             <select id="avgTime" name="avg_daily_sm_use">
                 <!-- <option value="" disabled selected>select time spent</option> -->
                 <option value="Less than an Hour">Less than an Hour</option>
@@ -128,7 +128,7 @@
                 <option value="More than 5 hours">More than 5 hours</option>
             </select>
             <br><br>
-            <label>How often do you find yourself using social media without a specific purpose?</label>
+            <label>9. How often do you find yourself using social media without a specific purpose?</label>
             <br><br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -155,7 +155,7 @@
             </div>
             
             <br>
-            <label>How often do you get distracted by social media when you are busy doing something?</label>
+            <label>10. How often do you get distracted by social media when you are busy doing something?</label>
             <br><br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -181,7 +181,7 @@
                 </div>
             </div>            
             <br><br>
-            <label>Do you feel restless if you haven't used social media in a while?</label>
+            <label>11. Do you feel restless if you haven't used social media in a while?</label>
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -207,7 +207,7 @@
                 </div>
             </div>            
             <br><br>
-            <label>On a scale of 1 to 5, how easily distracted are you?</label>
+            <label>12. On a scale of 1 to 5, how easily distracted are you?</label>
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -233,7 +233,7 @@
                 </div>
             </div>             
             <br><br>
-            <label>On a scale of 1 to 5, how much are you bothered by worries?</label>
+            <label>13. On a scale of 1 to 5, how much are you bothered by worries?</label>
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -259,7 +259,7 @@
                 </div>
             </div>             
             <br><br>
-            <label>Do you find it difficult to concentrate on things?</label>
+            <label>14. Do you find it difficult to concentrate on things?</label>
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -285,7 +285,7 @@
                 </div>
             </div>            
             <br><br>
-            <label >On a scale of 1-5, how often do you compare yourself to other successful people through the use of social media?</label>
+            <label>15. On a scale of 1-5, how often do you compare yourself to other successful people through the use of social media?</label>
             <br><br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -311,7 +311,7 @@
                 </div>
             </div>
             <br><br>
-            <label>Following the previous question, how do you feel about these comparisons, generally speaking?</label>
+            <label>16. Following the previous question, how do you feel about these comparisons, generally speaking?</label>
             <br><br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -337,7 +337,7 @@
                 </div>
             </div>
             <br><br>
-            <label>How often do you look to seek validation from features of social media?</label>
+            <label>17. How often do you look to seek validation from features of social media?</label>
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -363,7 +363,7 @@
                 </div>
             </div>            
             <br><br>
-            <label>How often do you feel depressed or down?</label>
+            <label>18. How often do you feel depressed or down?</label>
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -389,7 +389,7 @@
                 </div>
             </div>                        
             <br><br>
-            <label>On a scale of 1 to 5, how frequently does your interest in daily activities fluctuate?</label>
+            <label>19. On a scale of 1 to 5, how frequently does your interest in daily activities fluctuate?</label>
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
@@ -415,7 +415,7 @@
                 </div>
             </div>            
             <br><br>
-            <label>On a scale of 1 to 5, how often do you face issues regarding sleep?</label>
+            <label>20. On a scale of 1 to 5, how often do you face issues regarding sleep?</label>
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
