--- a/views/helpGenZ.ejs
+++ b/views/helpGenZ.ejs
@@ -11,76 +11,24 @@
     <section>
         <div class="container">
             <h1>You're from:</h1>
-            <h1 class="hidden">Gen Z</h1>
-            <!-- <br>
-            <br>
-            <br>    
+            <h1 class="hidden">Gen Z</h1>    
             <br>
             <br>
             <br>
             <br>
-            <br>
-            <br>
-            <br>
-            <br>    
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>    
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>    
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>    
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>    
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>    
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>    
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br> -->
             <h2>Your generation may suffer more from:</h2>
-            <h2 class="hidden">Depression</h2>
-            <h2 class="hidden">Worriedness</h2>
-            <h2 class="hidden">Distractions</h2>
+            <h3 class="hidden">&bull; Depression</h2>
+            <h3 class="hidden">&bull; Worriedness</h2>
+            <h3 class="hidden">&bull; Distractions</h2>
             <h2>When compared with other generations</h2>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>What can I do to reduce my suffering:</h2>
+            <h6 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h6>
+            <h6 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h6>
+            <h6 class="hidden">&bull; Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa odio labore ducimus quisquam atque recusandae quod itaque nihil eveniet dignissimos veniam excepturi, blanditiis perspiciatis nobis corrupti similique beatae culpa quia?</h6>
         </div>
     </section>
 </body>
