It works!!! survey submission

--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -103,8 +103,8 @@
                 <input type="checkbox" id="cbTwitter" name="platform_name" value="Twitter">
                 <label>Twitter</label>
                 <br>
-                <input type="checkbox" id="cbYoutube" name="platform_name" value="Youtube">
-                <label>Youtube</label>
+                <input type="checkbox" id="cbYouTube" name="platform_name" value="YouTube">
+                <label>YouTube</label>
                 <br>
             </fieldset>
             <br><br>
