--- a/views/login.ejs
+++ b/views/login.ejs
@@ -55,7 +55,7 @@
                 <h1>Log in</h1>
                 <br>
                 <p id="warning_id"></p>
-                <form action="/loginsubmit" method="POST">
+                <form action="/loginSubmit" method="POST">
                     <label for="username">Username</label>
                     <Input type="text" id="login_username" name="login_username"></Input>
                     <br>
