--- a/views/modifyAcc.ejs
+++ b/views/modifyAcc.ejs
@@ -65,19 +65,19 @@
                 <p id="warning_id"></p>
                 <form action="/modifyAcc" method="POST">
                     <label for="FirstName">First Name</label>
-                    <input type="text" id="login_firstname" name="login_firstname" value="<%= user[0].first_name%>">
+                    <input type="text" id="login_firstname" name="login_firstname" value="<%= myUsers[0].first_name%>">
                     <br>
                     <br>
                     <label for="LastName">Last Name</label>
-                    <input type="text" id="login_lastname" name="login_lastname" value="<%= user[0].last_name%>">
+                    <input type="text" id="login_lastname" name="login_lastname" value="<%= myUsers[0].last_name%>">
                     <br>
                     <br>
                     <label for="username">Username</label>
-                    <input type="text" id="login_username" name="login_username" value="<%= user[0].username%>">
+                    <input type="text" id="login_username" name="login_username" value="<%= myUsers[0].username%>">
                     <br>
                     <br>
                     <label for="password">Password</label>
-                    <input type="text" id="login_password" name="login_password" value="<%= user[0].password%>">
+                    <input type="text" id="login_password" name="login_password" value="<%= myUsers[0].password%>">
                     <input type="checkbox" onclick="ShowPassword()">Show Password
                     <br>
                     <br>
