--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
         }
         .covered-img {
         background:url('/resources/44afc8_b3821d1f8dfc44c78ab589e5ee89fccf~mv2.webp');
-        opacity: .25;
+        opacity: .50;
 
         background-size:cover; /* cover will scale the image so that the smallest dimension = the widest dimension of the box */
         background-position:center; /* vs the top-left that is default */
@@ -75,10 +75,10 @@
         <div class="col-xs-12 covered">
             <div class="covered-img"></div>
             <h1 class="text-center fw-bold display-1">
-                Imroving Mental Health Together
+                Improving Mental Health Together
             </h1>
             <br>
-        <div class="card mx-auto" style="width: 18rem;">
+        <div class="card mx-auto" style="width: 25rem;">
             <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" class="card-img-top" alt="...">
             <div class="card-body">
             <h5 class="card-title text-center">Help Us Help You</h5>
