--- a/views/modifyAcc.ejs
+++ b/views/modifyAcc.ejs
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <link rel="script" href="/scripts/scripts.js">
+    <link rel="script" href="/scripts/scripts.jsy">
     <title>Document</title>
 </head>
 <body>
@@ -56,45 +56,34 @@
             <div class="contact-form section-sm p-5 cta bg-light">
                 <h1>Edit Your Account</h1>
                 <br>
-                <!-- <select name="cars" id="cars">
-                    <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                    <option value="mercedes">Mercedes</option>
-                    <option value="audi">Audi</option>
-                  </select> -->
-                <p id="warning_id"></p>
                 <form action="/modifyAcc" method="POST">
                     <label for="FirstName">First Name</label>
                     <input type="text" id="login_firstname" name="login_firstname" value="<%= myUsers[0].first_name%>">
-                    <br>
-                    <br>
+                    <br><br>
                     <label for="LastName">Last Name</label>
                     <input type="text" id="login_lastname" name="login_lastname" value="<%= myUsers[0].last_name%>">
-                    <br>
-                    <br>
+                    <br><br>
                     <label for="username">Username</label>
                     <input type="text" id="login_username" name="login_username" value="<%= myUsers[0].username%>">
-                    <br>
-                    <br>
+                    <br><br>
                     <label for="password">Password</label>
-                    <input type="text" id="login_password" name="login_password" value="<%= myUsers[0].password%>">
+                    <input type="password" id="login_password" name="login_password" value="<%= myUsers[0].password%>">
                     <input type="checkbox" onclick="ShowPassword()">Show Password
-                    <br>
-                    <br>
-                    <input type="submit" value="Log In"></Input>
+                    <br><br>
+                    <button type="submit">Edit</button>
                 </form>
-                
             </div>
         </div>
-        <script>
-            function ShowPassword() {
-                var x = document.getElementById("login_password");
-                if (x.type === "password") {
-                    x.type = "text";
-                } else {
-                    x.type = "password";
-                }
+    </div>
+    <script>
+        function ShowPassword() {
+            var x = document.getElementById("login_password");
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
             }
-        </script>
+        }
+    </script>
 </body>
 </html>
