--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -432,18 +432,58 @@
                 </div>
             </div> 
 
-            <button type="submit" >Submit</button>
+            <div>
+                <h1 id="GenAs"></h1>
+                <h1 id="UsageAs"></h1>
+                <h1 id="Recs"></h1>
+            </div>
+            <button onclick="evaluationForYou()"></button>
+            <!-- <button type="submit" onclick="">Submit</button> -->
         </fieldset>
     </form>
     
-    <!-- <script>
-        function getTimeStamp()
-        {
-            // Set the timestamp value in the hidden input field
-            document.getElementById('timestamp').value = new Date().toISOString();
-        }
+
+
+    <script>
+        // function getTimeStamp()
+        // {
+        //     // Set the timestamp value in the hidden input field
+        //     document.getElementById('timestamp').value = new Date().toISOString();
+        // }
        
-    </script> -->
+        function evaluationForYou(){
+            let userAge = document.getElementById("numAge").value
+            let userUsage = document.getElementById("avgTime").value
+
+            if (userAge >= 59){
+                userAge = "Baby Boomers"
+            }
+            else if (userAge >= 43){
+                userAge = "Gen X"
+            }
+            else if (userAge >= 27){
+                userAge = "Millennials"
+            }
+            else{
+                userAge = "Gen Z"
+            }
+
+            let sGenerationalAssessment = "With your associated generation, " + userAge + ",<br>"
+
+            let sUsageAssessmnet = "and with your usage being " + userUsage + ",<br>"
+
+            let sReccomendationAssessment = "So here are the following things you may be more succeptable to: "
+
+            document.getElementById("GenAs").innerHTML = sGenerationalAssessment
+            document.getElementById("UsageAs").innerHTML = sUsageAssessmnet
+            document.getElementById("Recs").innerHTML = sReccomendationAssessment
+        }
+
+    
+
+
+
+    </script>
     
 </body>
 </html>
