--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -434,12 +434,11 @@
                 <h1 id="UsageAs"></h1>
                 <h1 id="Recs"></h1>
             </div>
-            <button onclick="evaluationForYou()"></button>
             <!-- <button type="submit" onclick="">Submit</button> -->
         </fieldset>
     </form>
     
-
+    <button onclick="evaluationForYou()">s</button>
 
     <script>
         // function getTimeStamp()
